# discovery-co-scientist

./: .gitignore  ACKNOWLEDGMENTS.md  README.md  pyproject.toml
co_scientist/: cli.py  config.py  ids.py  runbook.py
co_scientist/agents/: analysis.py  assay.py  base.py  candidate.py  evolution.py  generation.py  metareview.py  ranking.py  reflection.py  result_interpreter.py  robin_helpers.py  schemas.py  supervisor.py
co_scientist/bench/: __init__.py  fixtures.py  presets.py  runner.py
co_scientist/evals/: rubrics.py  runner.py
co_scientist/llm/: anthropic_client.py  budgets.py  estimator.py  openai_client.py  prompts.py  routing.py  tool_loop.py
co_scientist/models/: __init__.py  review.py  robin.py  session.py  task.py
co_scientist/obs/: metrics.py
co_scientist/orchestrator/: btl.py
co_scientist/retrieval/: __init__.py  evidence.py
co_scientist/safety/: citation_verifier.py  classifier.py  gates.py  quoting.py
co_scientist/storage/: db.py  schema.sql
co_scientist/storage/migrations/: 0006_robin_workflow.sql
co_scientist/storage/repos/: hypotheses.py  robin.py  sessions.py
co_scientist/tests/unit/: test_agent_helpers.py  test_bench.py  test_btl.py  test_budgets.py  test_cli_dashboard_links.py  test_cli_evidence.py  test_config_provider_keys.py  test_dashboard_summary.py  test_dashboard_web.py  test_discovery_branding_interfaces.py  test_duplicate_metric_events.py  test_estimator.py  test_evals.py  test_evidence_bundle.py  test_metrics.py  test_paperclip_tools.py  test_project_file_ingest.py  test_prompt_injection_fixtures.py  test_prompts.py  test_provider.py  test_quoting.py  test_ranking.py  (+21 more)
co_scientist/tools/: base.py  cache.py  local_pdf_search.py  registry.py  science_skills.py
co_scientist/vectors/: embedder.py
co_scientist/web/: app.py  dashboard.py
co_scientist/workspace/: __init__.py  ingest.py  manifest.py  publication.py
config/: default.toml
config/prompts/: parse_goal.md  ranking_debate.md  reflection_screen.md  robin_assay_evaluation.md  robin_assay_generation.md  robin_assay_pairwise_judge.md  robin_assay_query_generation.md  robin_candidate_evaluation.md  robin_candidate_generation.md  robin_candidate_goal_synthesis.md  robin_candidate_pairwise_judge.md  robin_candidate_query_generation.md  robin_flow_cytometry_analysis.md  robin_result_interpretation.md  robin_rnaseq_analysis.md
docs/: BENCH_RESULTS.md  CO_SCIENTIST_APPLICATION_MANUAL.md  CO_SCIENTIST_EVALUATION_ROADMAP.md  DEVELOPMENT.md  DEVELOPMENT_TODO.md  EVIDENCE_RETRIEVAL.md  NEW_REPO_MIGRATION.md  ROBIN_WORKFLOW.md  RUNBOOKS.md
scripts/: build_bench_report.py
(+16 files in other folders)
