[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discovery-co-scientist"
version = "0.1.0"
description = "Discovery Co-Scientist: multi-agent scientific discovery with Robin-style lab-in-the-loop workflows"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Discovery Co-Scientist contributors" }]
keywords = ["ai", "agents", "research", "anthropic", "claude"]

dependencies = [
    # LLM clients (provider is selectable via [llm] provider = ...)
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    # Async stack
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    # CLI + config
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "tomli>=2.0.1; python_version < '3.11'",
    # Templates
    "jinja2>=3.1.4",
    # Vectors + embeddings
    "faiss-cpu>=1.8.0",
    "voyageai>=0.2.3",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    # Web fetch + parsing
    "trafilatura>=1.12.0",
    "pypdf>=4.3.0",
    # Logging + ids
    "structlog>=24.4.0",
    "python-ulid>=2.7.0",
    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.3",
    "python-multipart>=0.0.12",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-recording>=0.13.2",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
# `openai` extra retained for compatibility with older configs; the SDK is
# now in the default dependency set so the OpenAI provider works out of the
# box.
openai = ["openai>=1.40.0"]
paperclip = ["gxl-paperclip>=0.1.4"]

[project.scripts]
discovery-coscientist = "co_scientist.cli:app"
co-scientist = "co_scientist.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["co_scientist"]
force-include = { "config" = "config" }

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true
extend-exclude = ["co_scientist/web/templates/*.html"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"co_scientist/cli.py" = ["B008"]                  # typer.Option/Argument as defaults
"co_scientist/tools/*.py" = ["RUF012"]            # ClassVar JSONSchema dicts read-only
"co_scientist/tools/**/*.py" = ["RUF012"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["co_scientist/tests"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
